--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,20 @@
 .site-wrap {
 	text-align: center;
 	background: #000;
-	overflow: scroll;
 }
 .homepage-wrap {
 	text-align: center;
-	padding: 15% 0;
 	background: #046a38;
 	height: 100vh;
 }
 h1 {
 	text-align: center;
 	color: #fff;
+	padding-top: 5%;
 }
 
 h2 {
-	margin-bottom: 15%;
+	margin-bottom: 8%;
 	color: #fff;
 }
 
@@ -28,16 +27,24 @@ h3 {
 	
 }
 
+a {
+	color: inherit;
+	height: 100%;
+	width: 100%;
+}
+
 .homepage-block {
+	font-family: 'Indie Flower', cursive;
 	position: relative;
 	background-color: rgba(255,255,165,0.9);
 	height: 250px;
+	box-shadow: -6px 6px 3px #333;
 }
 
 .pin-top-left {
 	position: absolute;
-	top:-5px;
-	left: -30px;
+	top:-7px;
+	left: -19px;
 	width: 20%;
 }
 
@@ -49,16 +56,27 @@ h3 {
 }
 
 .bottom {
-	margin-top: 25%;
+	margin-top: 15%;
 }
+/********Thank You Styles ********/
+.thank-you-title {
+	color: #046a38;
+}
+
+/******** Form Styles ********/
 span {
 	margin: 10px 0;
 	line-height: 50px;
 }
+
 form {
 	max-width: 800px;
 	margin: 50px auto 0;
 	padding: 0 20px;
+}
+
+.form-title {
+	color: #046a38;
 }
 
 .form-control {
@@ -67,13 +85,26 @@ form {
 	border: none;
 	border-bottom: 1px dotted #000;
 	padding: 0;
+	font-family: 'Indie Flower', cursive;
+}
+
+.faculty-member, .quality {
+	width: 170px;
+}
+
+
+.name {
+	display: block;
+	margin-bottom: 20px;
 }
 
 ::-webkit-.form-control-placeholder {
 	color: #00ff00;
 }
 
-.btn {
+.btn-primary {
 	display: block;
-	margin-top: 20px;
-}
+	margin: 30px 0 ;
+	background: #046a38;
+	width: 20%;
+	border-color: #046a38;
