--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,27 @@
+body {
+	overflow: scroll;
+}
+
+.container {
+	
+}
 .site-wrap {
 	text-align: center;
-	background: #000;
 }
 .homepage-wrap {
 	text-align: center;
 	background: #046a38;
-	height: 100vh;
+	padding-bottom: 80px;
+}
+
+.header {
+	background: #000;
+	height: 150px;
 }
 h1 {
 	text-align: center;
 	color: #fff;
-	padding-top: 5%;
+	padding-top: 10%;
 }
 
 h2 {
@@ -43,9 +54,7 @@ a {
 	box-shadow: -5px 10px 5px #333;
 }
 
-.homepage-block.alumni {
-	height: 350px;
-}
+
 
 .pin-top-left {
 	position: absolute;
@@ -61,15 +70,16 @@ a {
 	width: 50%;
 }
 
-.bottom {
-	margin-top: 15%;
-}
 /********Thank You Styles ********/
 .thank-you-title {
 	color: #046a38;
 }
 
 /******** Form Styles ********/
+
+span, p {
+	font-size: 22px;
+}
 span {
 	margin: 10px 0;
 	line-height: 50px;
@@ -92,6 +102,8 @@ form {
 	border-bottom: 1px dotted #000;
 	padding: 0;
 	font-family: 'Kalam', cursive;
+	text-align: center;
+	font-size: 20px;
 }
 
 .faculty-member, .quality {
@@ -99,7 +111,7 @@ form {
 }
 
 .long {
-	width: 250px;
+	width: 300px;
 }
 
 
@@ -116,5 +128,21 @@ form {
 	display: block;
 	margin: 30px 0 ;
 	background: #046a38;
-	width: 20%;
+	width: 30%;
 	border-color: #046a38;
+	font-size: 22px;
+	
+}
+/******** Responive Styles ********/
+@media (min-device-width: 768px) {
+	body {
+		overflow: hidden;
+	}
+	.homepage-wrap {
+		text-align: center;
+		background: #046a38;
+		height: 100vh;
+		padding-bottom: 0;
+
+	}
+}
