--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: 'National Regular';
+	src: url(/fonts/National-Regular.otf');
+	font-weight: normal;
+	font-style: normal; 
+}
 body {
 	overflow: scroll;
 }
@@ -19,25 +25,27 @@ body {
 
 .header {
 	background: #000;
-	height: 150px;
+	height: 100px;
 	position: relative;
 }
 
 .logo {
-	width: 100px;
+	width: 75px;
 	position: absolute;
-	top: 15px;
+	top: 12px;
 	left: 15px;
 }
 h1 {
 	text-align: center;
 	color: #fff;
 	padding-top: 10%;
+	font-family: 'National-Regular', Arial, sans-serif;
 }
 
 h2 {
 	margin-bottom: 8%;
 	color: #fff;
+	font-family: 'National-Regular', Arial, sans-serif;
 }
 
 h3 {
@@ -68,7 +76,7 @@ a {
 
 .footer {
 	background: #000;
-	height: 200px;
+	height: 150px;
 	position: relative
 }
 
@@ -89,6 +97,7 @@ a {
 
 span, p {
 	font-size: 22px;
+	font-family: 'National-Regular', Arial, sans-serif;
 }
 span {
 	margin: 10px 0;
@@ -96,13 +105,14 @@ span {
 }
 
 form {
-	max-width: 800px;
-	margin: 50px auto 0;
+	max-width: 1000px;
+	margin: 50px auto ;
 	padding: 0 20px;
 }
 
 .form-title {
 	color: #046a38;
+	font-family: 'National-Regular', Arial, sans-serif;
 }
 
 .form-control {
@@ -114,6 +124,11 @@ form {
 	font-family: 'Kalam', cursive;
 	text-align: center;
 	font-size: 20px;
+	margin-bottom: 20px;
+}
+
+.name {
+	margin: 20px 10px;
 }
 
 .faculty-member, .quality {
@@ -125,10 +140,7 @@ form {
 }
 
 
-.name {
-	display: block;
-	margin-bottom: 20px;
-}
+
 
 ::-webkit-.form-control-placeholder {
 	color: #00ff00;
@@ -150,8 +162,7 @@ form {
 	}
 	.content-wrap {
 		text-align: center;
-		height: calc(100vh - 350px);
-		padding-bottom: 0;
+		padding-bottom: 150px;
 
 	}
 }
