--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,12 +19,12 @@ body {
 
 .content-wrap {
 	background: #046a38;
-	padding-bottom: 80px;
+	padding-bottom: 0px;
 	padding: 0 15px;
 }
 
 .header {
-	background: #000;
+	background: #046a38;
 	height: 100px;
 	position: relative;
 }
@@ -38,7 +38,7 @@ body {
 h1 {
 	text-align: center;
 	color: #fff;
-	padding-top: 10%;
+	padding-top: 5%;
 	font-family: 'National-Regular', Arial, sans-serif;
 }
 
@@ -75,7 +75,7 @@ a {
 }
 
 .footer {
-	background: #000;
+	background: #046a38;
 	height: 150px;
 	position: relative
 }
@@ -162,7 +162,7 @@ form {
 	}
 	.content-wrap {
 		text-align: center;
-		padding-bottom: 150px;
+		padding-bottom: 50px;
 
 	}
 }
